--- a/Proposal1/Proposal1_Excel.ipynb
+++ b/Proposal1/Proposal1_Excel.ipynb
@@ -38,7 +38,7 @@
       "source": [
         "whats\n",
         "# Download the zip file at dataUrl and save it as data.zip. \n",
-        "dataUrl = \"https://s3-us-west-2.amazonaws.com/apurvasbucket2/data.zip\"\n",
+        "dataUrl = \"https://github.com/NUS-ALSET/Jupyter_Problem_Proposals/raw/master/Proposal1/data.zip\"\n",
         "\n",
         "import os.path\n",
         "import requests \n",
