--- a/Proposal2/Proposal2_EmailTemplate.ipynb
+++ b/Proposal2/Proposal2_EmailTemplate.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "[View in Colaboratory](https://colab.research.google.com/github/apurvaasf/Jupyter_Problem_Proposals/blob/master/Proposal2/Proposal2_EmailTemplate.ipynb)"
+        "[View in Colaboratory](https://colab.research.google.com/github/NUS-ALSET/Jupyter_Problem_Proposals/blob/master/Proposal2/Proposal2_EmailTemplate.ipynb)"
       ]
     },
     {
@@ -38,7 +38,7 @@
       "source": [
         "# Download the zip file at dataUrl and save it as data.zip. \n",
         "\n",
-        "dataUrl = \"https://s3-us-west-2.amazonaws.com/apurvasbucket2/data2.zip\"\n",
+        "dataUrl = \"https://github.com/NUS-ALSET/Jupyter_Problem_Proposals/raw/master/Proposal2/data2.zip\"\n",
         "\n",
         "import os.path\n",
         "import requests \n",
