--- a/Proposal3/Proposal3_SumProblemProposal.ipynb
+++ b/Proposal3/Proposal3_SumProblemProposal.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "[View in Colaboratory](https://colab.research.google.com/github/apurvaasf/Jupyter_Problem_Proposals/blob/master/Proposal3/Proposal3_SumProblemProposal.ipynb)"
+        "[View in Colaboratory](https://colab.research.google.com/github/NUS-ALSET/Jupyter_Problem_Proposals/blob/master/Proposal3/Proposal3_SumProblemProposal.ipynb)"
       ]
     },
     {
@@ -38,7 +38,7 @@
       "source": [
         "# Download the zip file at dataUrl and save it as data.zip. \n",
         "\n",
-        "dataUrl = \"https://s3-ap-southeast-1.amazonaws.com/alset-jupyter/data.zip\"\n",
+        "dataUrl = \"https://github.com/NUS-ALSET/Jupyter_Problem_Proposals/raw/master/Proposal3/data.zip\"\n",
         "\n",
         "import os.path\n",
         "import requests \n",
