--- a/PredictingValues_Proposal4/Proposal4.ipynb
+++ b/PredictingValues_Proposal4/Proposal4.ipynb
@@ -38,7 +38,7 @@
       "source": [
         "# Download the zip file at dataUrl and save it as data3.zip. \n",
         "\n",
-        "dataUrl = \"https://s3-us-west-2.amazonaws.com/apurvasbucket2/data3.zip\"\n",
+        "dataUrl = \"Jupyter_Problem_Proposals/PredictingValues_Proposal4/data3.zip\"\n",
         "\n",
         "import os.path\n",
         "import requests \n",
