--- a/Kaggle_Proposal5/Proposal5.ipynb
+++ b/Kaggle_Proposal5/Proposal5.ipynb
@@ -173,6 +173,8 @@
       "source": [
         "# For each problem, produce a solution. Copy the example_problem to the solution by default. \n",
         "import shutil\n",
+        "import pandas as pd\n",
+        "import random\n",
         "\n",
         "# Call the overfit solver. \n",
         "# This will only work when example_solutions are present. \n",
