--- a/Kaggle_Proposal5/Proposal5.ipynb
+++ b/Kaggle_Proposal5/Proposal5.ipynb
@@ -335,7 +335,7 @@
         "  fail_=total-count\n",
         "\n",
         "  with open('results.json', 'w') as outfile:\n",
-        "    json.dump(({'Number of Tests run':total},{'Pecentage of examples passed':percentage_},{'Number of examples passed':count},{'Number of examples failed':fail_}), outfile)\n",
+        "    json.dump(({'Number of tests run':total},{'Pecentage of examples passed':percentage_},{'Number of examples passed':count},{'Number of examples failed':fail_}), outfile)\n",
         "\n",
         "  return percentage_\n",
         "\n",
