--- a/PredictingValues_Proposal4/Proposal4.ipynb
+++ b/PredictingValues_Proposal4/Proposal4.ipynb
@@ -38,10 +38,9 @@
       "source": [
         "# Download the zip file at dataUrl and save it as data3.zip. \n",
         "\n",
-        "dataUrl = \"Jupyter_Problem_Proposals/PredictingValues_Proposal4/data3.zip\"\n",
+        "dataUrl = \"https://github.com/NUS-ALSET/Jupyter_Problem_Proposals/raw/master/PredictingValues_Proposal4/data3.zip\"\n",
         "\n",
         "import os.path\n",
-        "import requests \n",
         "\n",
         "\n",
         "def download_file(url, filename):\n",
@@ -51,6 +50,7 @@
         "  if not fileExists:\n",
         "    print(\"Downloading\", filename)\n",
         "\n",
+        "    import requests \n",
         "    response = requests.get(url, stream=True)\n",
         "\n",
         "    # Throw an error for bad status codes\n",
