--- a/ListQuestion.ipynb
+++ b/ListQuestion.ipynb
@@ -45,6 +45,7 @@
         "mylist = [1,2,3]\n",
         "try:\n",
         "  assert(fn(mylist)==6)\n",
+        "  print(\"One of the tests passed.\")\n",
         "  assert(fn([3,4,5,6])==18)\n",
         "except:\n",
         "  print(\"One of the tests failed.\")"
